--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,24 @@ spring.datasource.validationQuery=SELECT 1 FROM DUAL
 #配置注解形式的mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.java.pojo  //别名
+
+#配置文件上传
+spring.http.multipart.maxFileSize=1048576
+spring.http.multipart.maxRequestSize=10485760
+
+#配置http请求编码
+spring.http.encoding.charset=utf-8
+spring.http.encoding.force=true
+spring.http.encoding.enabled=true
+
+#配置mongodb
+#spring.data.mongodb.uri=mongodb://localhost:27017/k09
+
+#配置springdata(JPA)
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+##就是接数据库类型
+#spring.jpa.database=MYSQL
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
